# statemachine

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile
docs/: design.md
examples/: CMakeLists.txt
examples/UpdatePassword/: CMakeLists.txt  updatePassword.cpp
libstate/: CMakeLists.txt
libstate/src/: libstate.cpp  libstate.hpp
src/: CMakeLists.txt  main.cpp
